--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Sat Nov 10 11:24:49 CST 2012
-app.grails.version=2.1.1
+#Sat Nov 10 11:44:32 CST 2012
+app.grails.version=2.2.0.RC2
 app.name=trollboard
 app.version=0.1
